--- a/templates/public/current.tmpl
+++ b/templates/public/current.tmpl
@@ -3,7 +3,7 @@
 
 <script type="text/javascript">
 
-//set_primary_tab("menu_current");
+set_primary_tab("menu_current");
 
 $.ajaxSetup ({  
   cache: false  
