--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -2,7 +2,7 @@
 
 <script type="text/javascript">
 
-//set_primary_tab("menu_myaccount");
+set_primary_tab("menu_myaccount");
 
 $.ajaxSetup ({  
   cache: false  
