--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -74,12 +74,12 @@
   <!--***************ARIA MARKER 'NAVIGATION'***************-->
   <nav role="navigation">
     <ul class="nav inline-items">
-      <li><a href="/cgi-bin/public.cgi?rm=search_form">home</a></li>
-      <li><a href="/cgi-bin/public.cgi?rm=myaccount_form">my account</a></li>
-      <li><a href="/cgi-bin/public.cgi?rm=current_form">current borrowing</a></li>
-      <li><a href="/cgi-bin/public.cgi?rm=about_form">help</a></li>
-      <li><a href="/cgi-bin/public.cgi?rm=faq_form">faq</a></li>
-      <li><a href="/cgi-bin/public.cgi?rm=contact_form">contact</a></li>
+      <li><a id="menu_search" href="/cgi-bin/public.cgi?rm=search_form">home</a></li>
+      <li><a id="menu_myaccount" href="/cgi-bin/public.cgi?rm=myaccount_form">my account</a></li>
+      <li><a id="menu_current" href="/cgi-bin/public.cgi?rm=current_form">current borrowing</a></li>
+      <li><a id="menu_about" href="/cgi-bin/public.cgi?rm=about_form">help</a></li>
+      <li><a id="menu_faq" href="/cgi-bin/public.cgi?rm=faq_form">faq</a></li>
+      <li><a id="menu_contact" href="/cgi-bin/public.cgi?rm=contact_form">contact</a></li>
     </ul>
   </nav>
 
@@ -113,11 +113,11 @@
 
 
 <!-- end header.tmpl -->
-<!--
+
 <script type="text/javascript">
   set_primary_tab("menu_search");
 </script>
--->
+
 
   <div id="switchmenu" style="display: none">
    <a href="#" onclick="switchView('recordview')">Record Browser</a>
