--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -128,7 +128,7 @@ $('document').ready(function(){
         </table>
 
         <input id="home_library_town" type="hidden">
-        <input id="fill-button" type="submit" value="Submit">
+        <input class="button-left" type="submit" value="Submit">
       </form>
     </div>
     <br/>
