submit button on registration page

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -352,12 +352,12 @@ button {
 	padding: .3em;
 }
 
-#fill-button
+/*#fill-button
 {
 	font-size: 1.4em;
 	margin: 1em;
 	padding: .3em 1em;
-}
+}*/
 
 }
 .tone-box.button-left {
