user info change to header

--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -59,6 +59,9 @@
 <!--***************ARIA MARKER 'BANNER'***************-->
 <header role="banner">
   <a href="?authen_logout=1"><button class="button-right">log out</button></a>
+    <div id="username"><TMPL_VAR name="username"></div>
+    <TMPL_VAR name="lid">
+    <TMPL_VAR name="library">
   <a href="/"><img src="/img/fill-logo.png" class="fill-logo" alt="fill"></a><p class="fill-tagline">connecting libraries, serving patrons.</p>
 </header>
   
