pipe white in footer

--- a/templates/public/footer.tmpl
+++ b/templates/public/footer.tmpl
@@ -5,7 +5,7 @@
 <footer role="contentinfo">
 <div id="nav2">
   
-    <a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a> | <a href="?authen_logout=1">Log out</a>
+    <a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a><span style="color:#fff;" | </span><a href="?authen_logout=1">Log out</a>
 
   <p>
     <!-- The id="username" div is necessary: the username gets extracted (in 
