--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -79,7 +79,7 @@ $('document').ready(function(){
       <tr><th scope="row">fILL Patron Identification</th><td id="pid"><TMPL_VAR name="pid"></td></tr>
     </table>
   
-  <button><a id="showChangePassButton" href="javascript:void(0)" onclick="toggleChangePassDiv()">Change password</a></button>
+  <a id="showChangePassButton" href="javascript:void(0)" onclick="toggleChangePassDiv()">Change password</a>
 
   <div id="divChangePass">
     <form id="changePassword_form" name="changePassword" action="" method="post">
