button test on sign up page

--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -34,6 +34,8 @@ $('document').ready(function(){
           <div class="login-footer">
             <p>Not a user?
               <button><a href="?rm=registration_form">Sign Up!</a></button>
+              <a href="?rm=registration_form">Sign Up!</a>
+
             </p>
             <p>If you cannot remember your user name or password, please contact your local public library.</p>
           </div>
