--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -33,9 +33,7 @@ $('document').ready(function(){
           </div>
           <div class="login-footer">
             <p>Not a user?
-              <button><a href="?rm=registration_form">Sign Up!</a></button>
-              <a href="?rm=registration_form">Sign Up!</a>
-
+              <a href="?rm=registration_form" id="fill-button">Sign Up!</a>
             </p>
             <p>If you cannot remember your user name or password, please contact your local public library.</p>
           </div>
