--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -67,8 +67,25 @@
 <div id="container">
   <!--ARIA MARKER 'BANNER'-->
   <header role="banner">
-        <a href="?authen_logout=1"><button class="button-right">log out</button></a>
-        <a href="/"><img src="/img/fill-logo.png" class="fill-logo" alt="fill"></a><p class="fill-tagline">connecting libraries, serving patrons.</p>
+    <div id="header_logo_div">
+      <a href="/"><img src="/img/fill-logo.png" class="fill-logo" alt="fill"></a><p class="fill-tagline">connecting libraries, serving patrons.</p>
+      </div>
+
+      <div id="logout_button_div">
+	<a href="?authen_logout=1"><button class="button-right">log out</button></a>
+      </div>
+
+      <div id="patron_header_info">
+	<!-- The id="username" div is necessary: the username gets extracted (in 
+	     fILL_client-public-x.y.js), and passed to the code that allows the patron 
+	     to make an ILL request (we need to know who is making the request :-)
+	     It doesn't have to be *here*, but it has to be somewhere....
+	  -->
+	<div id="username"><TMPL_VAR name="username"></div>
+	<p><TMPL_VAR name="library"></p>
+	<p style="display:none"><TMPL_VAR name="lid"></p>
+      </div>
+
   </header>
   
   <!--***************ARIA MARKER 'NAVIGATION'***************-->
