--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -26,7 +26,7 @@ $('document').ready(function(){
                     <input type="password" size="20" name="authen_password" tabindex="2" id="authen_passwordfield"><br>
             </fieldset>
             <fieldset>
-                    <input type="submit" class="button-left" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
+                    <input type="submit" class="button-left" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton" id="fill-button">
                     <input type="checkbox" value="1" name="authen_rememberuser" tabindex="3" id="authen_rememberuserfield"><span>Remember User Name</span><br>
 
             </fieldset>
