--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -26,14 +26,14 @@ $('document').ready(function(){
                     <input type="password" size="20" name="authen_password" tabindex="2" id="authen_passwordfield"><br>
             </fieldset>
             <fieldset>
-                    <input type="submit" class="button-left" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton" id="fill-button">
+                    <input type="submit" class="button-left" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
                     <input type="checkbox" value="1" name="authen_rememberuser" tabindex="3" id="authen_rememberuserfield"><span>Remember User Name</span><br>
 
             </fieldset>
           </div>
           <div class="login-footer">
             <p>Not a user?
-              <a href="?rm=registration_form" id="fill-button">Sign Up!</a>
+              <a href="?rm=registration_form"><button id="fill-button">Sign Up!</button></a>
             </p>
             <p>If you cannot remember your user name or password, please contact your local public library.</p>
           </div>
