patron header info

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -375,7 +375,9 @@ button {
 
 #patron_header_info {
     display: block;
+    clear: all;
     float: right;
+    color: #505050;
     text-align: right;
     font-size: .8em;
     margin: 1em;
