login display block

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -479,6 +479,8 @@ button {
 /*------------login styles---------------------------------*/
 
 .login {
+  display: block;
+  clear: all;
   width: 50%;
   margin: auto;
 }
