--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -212,7 +212,7 @@ nav li a.current_tab {
 #main-info-welcome 
 {
 	float: right;
-	display: block;
+	display: table;
 	clear: right;
 	width: 50%;
 	height: auto;
