--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -412,6 +412,7 @@ button {
 	line-height: 0px;
 	color: #505050;
 	text-transform: capitalize;
+	margin-bottom: 1em;
 }
 
 .fill-info 
@@ -590,7 +591,7 @@ div.login input {
 }
 
 .primary_info {
-	width: 100%;
+	width: 95%;
 	margin: 1em;
 	background-color: #e3e3e3;
 	padding: .7em;
