--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -212,6 +212,8 @@ nav li a.current_tab {
 #main-info-welcome 
 {
 	float: right;
+	display: table;
+	clear: right;
 	width: 50%;
 	height: auto;
 	font-size: 1.5em;
