--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -225,13 +225,13 @@ nav li a.current_tab {
 }
 
 #aside-img-welcome {
-	float: none;
+	float: left;
 	width: 40%;
 	height: auto;
 	min-height: 100% !important;
 	margin-bottom: 1.5em;
 	margin-top: 1em;
-	display: inline;
+	display: block;
 	overflow: auto;
   	padding-bottom: 10px; 
 }
