Revert "new button style attempt"
This reverts commit 5964644f03c336ee70617b0631d7518392aae517.

--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -33,7 +33,7 @@ $('document').ready(function(){
           </div>
           <div class="login-footer">
             <p>Not a user?
-              <a href="?rm=registration_form" role="button" id="fill-button">Sign Up!</a>
+              <a href="?rm=registration_form"><button id="fill-button">Sign Up!</button></a>
             </p>
             <p>If you cannot remember your user name or password, please contact your local public library.</p>
           </div>
