--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -74,11 +74,17 @@ header
 	display: block;	
 }
 
-input {
-	margin: 5px 0px 0px 0px;
+ input[type="text"] {
+ 	margin: 5px 0px 0px 0px;
 	width: auto;
 	height: 2em;
 	font-size: 1em;
+}
+
+input[type="submit"] {
+ 	font-size: 1.4em;
+	margin: .5em;
+	padding: .3em;
 }
 
 nav
@@ -356,8 +362,7 @@ button {
 	padding: .3em;
 }
 
-button[id="fill-button"]
-{
+#fill-button {
 	font-size: 1.4em;
 	margin: 1em;
 	padding: .3em 1em;
@@ -365,7 +370,7 @@ button[id="fill-button"]
 	background: #e3e3e3;
 }
 
-button[id="fill-button"]:hover {
+#fill-button {
 	background: #d3d3d3;
 	color: #383;
 }
