--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -362,7 +362,7 @@ button {
 	padding: .3em;
 }
 
-#fill-button {
+#fill-button:link {
 	font-size: 1.4em;
 	margin: 1em;
 	padding: .3em 1em;
@@ -370,7 +370,7 @@ button {
 	background: #e3e3e3;
 }
 
-#fill-button {
+#fill-button:hover {
 	background: #d3d3d3;
 	color: #383;
 }
