--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -33,7 +33,7 @@ $('document').ready(function(){
           </div>
           <div class="login-footer">
             <p>Not a user?
-              <a href="?rm=registration_form"><button type="button" role="button" id="fill-button">Sign Up!</button></a>
+              <a href="?rm=registration_form" type="button" role="button" id="fill-button">Sign Up!</a>
             </p>
             <p>If you cannot remember your user name or password, please contact your local public library.</p>
           </div>
