fill button in header

--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -63,7 +63,7 @@
   </div>
 
   <div id="logout_button_div">
-    <a href="?authen_logout=1"><button id="fill-button">log out</button></a>
+    <a href="?authen_logout=1" type="button" role="button" id="fill-button">log out</a>
   </div>
 
   <div id="patron_header_info">
