--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -94,7 +94,8 @@
       <li><a id="menu_search" href="/cgi-bin/public.cgi?rm=search_form">home</a></li>
       <li><a id="menu_myaccount" href="/cgi-bin/public.cgi?rm=myaccount_form">my account</a></li>
       <li><a id="menu_current" href="/cgi-bin/public.cgi?rm=current_form">current borrowing</a></li>
-      <li><a id="menu_about" href="/cgi-bin/public.cgi?rm=about_form">help</a></li>
+    <li><a id="menu_about" href="/cgi-bin/public.cgi?rm=about_form">About</a></li>
+    <li><a id="menu_about" href="/cgi-bin/public.cgi?rm=help_form">Help</a></li>
       <li><a id="menu_faq" href="/cgi-bin/public.cgi?rm=faq_form">faq</a></li>
       <li><a id="menu_contact" href="/cgi-bin/public.cgi?rm=contact_form">contact</a></li>
     </ul>
