--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -75,7 +75,7 @@ header
 	padding-top: 1em;
 }
 
- input[type="text"] {
+input[type="text"] {
  	margin: 5px 0px 0px 0px;
 	width: auto;
 	height: 2em;
@@ -218,14 +218,11 @@ nav li a.current_tab {
 
 #main-info-welcome 
 {
-	float: right;
-	display: table;
-	clear: right;
+	float: left;
 	width: 50%;
 	height: auto;
 	font-size: 1.5em;
-	margin-bottom: ;
-	margin-top: 1em;
+	margin: 1em;
   	padding: 1.25em; 
   	background: #e3e3e3;
 	border: 1px solid  #c9c9c9;  
