--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -8,39 +8,41 @@ $('document').ready(function(){
     $("#search").hide();
     $(".inline-items").children().hide();
     $(".inline-items").children(":contains('home')").show();
+    $("#fill-button").hide();  // hide the logout button, as it makes no sense here
 
 });
 
 </script>
-<div id="container">
-<form action="/cgi-bin/public.cgi" method="post" name="loginform">
-  <div class="login">
-          <div class="login-content">
-                    <div class="login-header">
-            <span class="login-header-title">Sign in to fILL</span>
-          </div>
-            <fieldset name="login">
-                    <label for="authen_username">User Name</label>
-                    <input type="text" value="" size="20" name="authen_username" tabindex="1" id="authen_loginfield"><br>
-                    <label for="authen_password">Password</label>
-                    <input type="password" size="20" name="authen_password" tabindex="2" id="authen_passwordfield"><br>
-            </fieldset>
-            <fieldset>
-                    <input type="submit" class="button-left" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
-                    <input type="checkbox" value="1" name="authen_rememberuser" tabindex="3" id="authen_rememberuserfield"><span>Remember User Name</span><br>
-
-            </fieldset>
-          </div>
-          <div class="login-footer">
-            <p>Not a user?
-              <a href="?rm=registration_form" type="button" role="button" id="fill-button">Sign Up!</a>
-            </p>
-            <p>If you cannot remember your user name or password, please contact your local public library.</p>
-          </div>
-  </div><!--div class login-->
-      <input type="hidden" value="https://localhost/cgi-bin/public.cgi?rm=search_form;submit=Log%20in" name="destination">
-      <input type="hidden" value="authen_login" name="rm">
-</form>
+<!-- <div id="container"> --> <!-- redundant: exists in header.tmpl -->
+<div style="clear:both">
+  <form action="/cgi-bin/public.cgi" method="post" name="loginform">
+    <div class="login">
+      <div class="login-content">
+        <div class="login-header">
+          <span class="login-header-title">Sign in to fILL</span>
+        </div>
+        <fieldset name="login">
+          <label for="authen_username">User Name</label>
+          <input type="text" value="" size="20" name="authen_username" tabindex="1" id="authen_loginfield"><br>
+          <label for="authen_password">Password</label>
+          <input type="password" size="20" name="authen_password" tabindex="2" id="authen_passwordfield"><br>
+        </fieldset>
+        <fieldset>
+          <input type="submit" class="button-left" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
+          <input type="checkbox" value="1" name="authen_rememberuser" tabindex="3" id="authen_rememberuserfield"><span>Remember User Name</span><br>
+        </fieldset>
+      </div>
+      <div class="login-footer">
+        <p>Not a user?
+          <a href="?rm=registration_form" type="button" role="button" id="fill-button">Sign Up!</a>
+        </p>
+        <p>If you cannot remember your user name or password, please contact your local public library.</p>
+      </div>
+    </div><!--div class login-->
+    <input type="hidden" value="https://localhost/cgi-bin/public.cgi?rm=search_form;submit=Log%20in" name="destination">
+    <input type="hidden" value="authen_login" name="rm">
+  </form>
+</div>
 
 <script language="JavaScript" type="text/javascript">
   $('#csstabs').hide();
