--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -92,12 +92,12 @@
   <nav role="navigation">
     <ul class="nav inline-items">
       <li><a id="menu_search" href="/cgi-bin/public.cgi?rm=search_form">home</a></li>
-      <li><a id="menu_myaccount" href="/cgi-bin/public.cgi?rm=myaccount_form">my account</a></li>
-      <li><a id="menu_current" href="/cgi-bin/public.cgi?rm=current_form">current borrowing</a></li>
+      <li><a id="menu_myaccount" href="/cgi-bin/public.cgi?rm=myaccount_form">My Account</a></li>
+      <li><a id="menu_current" href="/cgi-bin/public.cgi?rm=current_form">Current Borrowing</a></li>
     <li><a id="menu_about" href="/cgi-bin/public.cgi?rm=about_form">About</a></li>
     <li><a id="menu_about" href="/cgi-bin/public.cgi?rm=help_form">Help</a></li>
       <li><a id="menu_faq" href="/cgi-bin/public.cgi?rm=faq_form">FAQ</a></li>
-      <li><a id="menu_contact" href="/cgi-bin/public.cgi?rm=contact_form">contact</a></li>
+      <li><a id="menu_contact" href="/cgi-bin/public.cgi?rm=contact_form">Contact</a></li>
     </ul>
   </nav>
 
