--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -91,7 +91,7 @@
   <!--***************ARIA MARKER 'NAVIGATION'***************-->
   <nav role="navigation">
     <ul class="nav inline-items">
-      <li><a id="menu_search" href="/cgi-bin/public.cgi?rm=search_form">home</a></li>
+      <li><a id="menu_search" href="/cgi-bin/public.cgi?rm=search_form">Home</a></li>
       <li><a id="menu_myaccount" href="/cgi-bin/public.cgi?rm=myaccount_form">My Account</a></li>
       <li><a id="menu_current" href="/cgi-bin/public.cgi?rm=current_form">Current Borrowing</a></li>
     <li><a id="menu_about" href="/cgi-bin/public.cgi?rm=about_form">About</a></li>
