--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -6,7 +6,7 @@
 <div id="container">
 
   <div id="aside-img-left">
-        <img src='/img/fill-help.jpg' alt="Brown haired girl with a pony tail, reading a book in the park"/>
+        <img src='/img/fill-about.jpg' alt="Brown haired girl with a pony tail, reading a book in the park"/>
             <p class="note">Image care of <a href="https://www.flickr.com/photos/swanksalot/2715407049/">Seth Anderson</a></p>
 
   </div>
