--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -6,7 +6,7 @@
 <div id="container">
 
   <div id="aside-img-left">
-<span class="questionmarks">???</span>  </div>
+<img src="/img/fill-help.png"></div>
 
   <div id="main-info-right" class="tone-box">
         <h3>Help</h3>
