cleaner search results - indent second line and add hr between items

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -482,6 +482,10 @@ button {
 	color: #b3b3b3;
 }
 
+.indent {
+    padding-left: .5cm;
+}
+
 /*------------login styles---------------------------------*/
 
 .login {
