--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -72,7 +72,7 @@
       </div>
 
       <div id="logout_button_div">
-	<a href="?authen_logout=1"><button class="button-right">log out</button></a>
+      <a href="?authen_logout=1" type="button" role="button" id="fill-button">log out</a>
       </div>
 
       <div id="patron_header_info">
