background for fill table updated

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -433,7 +433,7 @@ button {
   	border-collapse: collapse;
   	width: 70%;
   	margin: 1em;
-	background: #f3f3f3;
+	background: #e3e3e3;
 	border: 2px solid #505050;
 	color: #505050;
 	padding: .5em;
