lighter colour for indent

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -484,6 +484,7 @@ button {
 
 .indent {
     padding-left: .5cm;
+    color: #505050;
 }
 
 /*------------login styles---------------------------------*/
