updating change password button

--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -97,8 +97,8 @@ $('document').ready(function(){
 	  <td><input type="password" name="newpass2" id="newpass2"></td>
 	</tr>
       </table>
-      <input type="hidden" name="pid" value=<TMPL_VAR name="pid">>
-      <input id="changePassword" type="submit" value="Change" class="butlink">
+      <input type="hidden" name="pid" value=<TMPL_VAR name="pid">
+      <input id="changePassword" type="submit" value="Change" class="fill-button">
       <input id="cancel" type="button" value="Cancel" class="butlink">
     </form>
   </div>
