update header search input
removed fill-button class

--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -100,7 +100,7 @@
 	search_process to feed the *real* search page -->
       <input id="query" type="text" name="query" size="50px" placeholder="Search" value="<TMPL_VAR name='query'>">
       <input id="rm" type="hidden" name="rm" value="search_form">
-      <input id="fill-button" type="submit" value="Go">
+      <input type="submit" value="Go">
     </form>
   </div>
 </div> <!-- search-container -->
