Revert "removed id from change password submit"
This reverts commit 04ac5de137e8664dd9c8f4de1584191d2da3e22b.

--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -98,7 +98,7 @@ $('document').ready(function(){
 	</tr>
       </table>
       <input type="hidden" name="pid" value=<TMPL_VAR name="pid">
-      <input type="submit" value="Change">
+      <input id="changePassword" type="submit" value="Change" class="fill-button">
       <input id="cancel" type="button" value="Cancel" class="butlink">
     </form>
   </div>
