--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -19,7 +19,7 @@ $('document').ready(function(){
     <div class="login">
       <div class="login-content">
         <div class="login-header">
-          <span class="login-header-title">Sign in to fILL</span>
+          <span class="login-header-title">Log in to fILL</span>
         </div>
         <fieldset name="login">
           <label for="authen_username">User Name</label>
