--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -300,8 +300,10 @@ footer
 
 input[type=text]
 {
+	margin: .5em;
+	padding: .3em;
     background-color: #fff;
-    border:solid 1px #BFBDBD;
+    border:solid 1px #505050;
     font-size: 1.4em;
     padding-left:10px;
     width: auto;
