--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
 <script type="text/javascript">
-    set_primary_tab("menu_about");
+    set_primary_tab("menu_help");
 </script>
 <div id="container">
 
