div class clear both

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -510,6 +510,10 @@ button {
     color: #505050;
 }
 
+.clear {
+	clear: both;
+}
+
 /*------------login styles---------------------------------*/
 
 .login {
