--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -13,8 +13,7 @@ $('document').ready(function(){
 });
 
 </script>
-<!-- <div id="container"> --> <!-- redundant: exists in header.tmpl -->
-<div style="clear:both">
+<div class="clear">
   <form action="/cgi-bin/public.cgi" method="post" name="loginform">
     <div class="login">
       <div class="login-content">
