clear added to logged out

--- a/templates/public/logged_out.tmpl
+++ b/templates/public/logged_out.tmpl
@@ -1,6 +1,6 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 
-<div id="container">
+<div class="clear">
 	<h1>Logged out</h1>
 	<p>Logged in as [<TMPL_VAR NAME="username">]</p>
 	<p>Session id [<TMPL_VAR NAME="sessionid">]</p>
