changed primary info margin

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -640,7 +640,7 @@ div.login input {
 
 .primary_info {
 	width: 95%;
-	margin: 1em;
+	margin: .5em;
 	background-color: #e3e3e3;
 	padding: .7em;
 	border: 2px solid #b3b3b3;
