--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -344,7 +344,7 @@ input[type=submit], input[type=text]
 
 #fill-button {
     margin: .5em;
-	padding: .3em;
+	padding: .3em 1em;
     background-color: #183935;
     color: #fff;
     font-size: 1.4em;
