--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -68,20 +68,22 @@
 
   <!--***************ARIA MARKER 'BANNER'***************-->
   <header role="banner">
-  
+
     <div id="logout_button_div">
       <a href="?authen_logout=1" type="button" role="button" id="fill-button">log out</a>
     </div>
 
-    <div id="patron_header_info">
-  <!-- The id="username" div is necessary: the username gets extracted (in 
-       fILL_client-public-x.y.js), and passed to the code that allows the patron 
-       to make an ILL request (we need to know who is making the request :-)
-       It doesn't have to be *here*, but it has to be somewhere....
-    -->
-        <div id="username"><TMPL_VAR name="username"></div>
-        <p><TMPL_VAR name="library"></p>
-        <p style="display:none"><TMPL_VAR name="lid"></p>
+    <div class="clear">
+      <div id="patron_header_info">
+    <!-- The id="username" div is necessary: the username gets extracted (in 
+         fILL_client-public-x.y.js), and passed to the code that allows the patron 
+         to make an ILL request (we need to know who is making the request :-)
+         It doesn't have to be *here*, but it has to be somewhere....
+      -->
+          <div id="username"><TMPL_VAR name="username"></div>
+          <p><TMPL_VAR name="library"></p>
+          <p style="display:none"><TMPL_VAR name="lid"></p>
+      </div>
     </div>
     <div id="header_logo_div">
       <a href="/"><img src="/img/fill-logo.png" class="fill-logo" alt="fill"></a><p class="fill-tagline">connecting libraries, serving patrons.</p>
