div clear to my account and current

--- a/templates/public/current.tmpl
+++ b/templates/public/current.tmpl
@@ -101,29 +101,28 @@ $('document').ready(function(){
 });
 
 </script>
+<div class="clear">
+  <div id="container">
 
-<div id="container">
+      <div id="middlecontent">
+        <div id="waitDiv">
+          Loading... <img src="/wait.gif">
+        </div>
 
-    <div id="middlecontent">
-      <div id="waitDiv">
-        Loading... <img src="/wait.gif">
+        <div id="mylistDiv">
+          <h2>Current borrowing</h2>
+        <div class="dataTable_wrapper">
+
+        	<table id="datatable_borrowing" class="display">
+        	  <thead>
+        	    <tr>
+        	      <th></th><th>cid</th><th>Title</th><th>Author</th><th>Status</th><th>Status Updated</th><th> </th>
+        	    </tr>
+        	  </thead>
+        	  <tbody>
+        	  </tbody>
+        	</table>
       </div>
-
-      <div id="mylistDiv">
-        <h2>Current borrowing</h2>
-      <div class="dataTable_wrapper">
-
-      	<table id="datatable_borrowing" class="display">
-      	  <thead>
-      	    <tr>
-      	      <th></th><th>cid</th><th>Title</th><th>Author</th><th>Status</th><th>Status Updated</th><th> </th>
-      	    </tr>
-      	  </thead>
-      	  <tbody>
-      	  </tbody>
-      	</table>
-    </div>
-
+  </div>
 </div>
-
 <TMPL_INCLUDE NAME="footer.tmpl">
