--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -336,7 +336,7 @@ input[type=submit]:hover
     background-color: #06a0ca;
 }
 
-input[type=submit], input[type=text]
+input[type=submit], input[type=text], input[type=password]
 {
     border: 0;
     border-radius:5px;
