--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -6,8 +6,11 @@
 <div id="container">
 
   <div id="aside-img-left">
-<img src="/img/fill-help.png"></div>
-
+    <div id="aside-img-right">
+      <img src='/img/fill-help.jpg' alt="Three children sitting on a couch in the library reading books"/>
+      <p class="note">Image care of <a href="https://www.flickr.com/photos/sanjoselibrary/2839834669/">the San Jose Library</a></p>
+  </div>
+  
   <div id="main-info-right" class="tone-box">
         <h3>Help</h3>
         <p>The fILL help page is designed to help you to better search for the book you want.<br />
