--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -47,7 +47,9 @@
 
 </div><!--main-info-left-->
 
-<img src="/img/fill-faq.png"></div>
+	<div id="aside-img-right">
+		<img src="/img/fill-help.png"></div>
+	</div>
 
 </div><!--div id container -->
 <!--
