--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -48,7 +48,7 @@
 </div><!--main-info-left-->
 
 	<div id="aside-img-right">
-		<img src="/img/fill-help.png"></div>
+		<img src="/img/fill-faq.png"></div>
 	</div>
 
 </div><!--div id container -->
