--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -69,7 +69,7 @@
   <!--***************ARIA MARKER 'BANNER'***************-->
   <header role="banner">
 
-    <div id="logout_button_div">
+    <div id="logout_button">
       <a href="?authen_logout=1" type="button" role="button" id="fill-button">log out</a>
     </div>
 
@@ -85,7 +85,7 @@
           <p style="display:none"><TMPL_VAR name="lid"></p>
       </div>
     </div>
-    <div id="header_logo_div">
+    <div id="header_logo">
       <a href="/"><img src="/img/fill-logo.png" class="fill-logo" alt="fill"></a><p class="fill-tagline">connecting libraries, serving patrons.</p>
     </div>
 
