--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -58,11 +58,12 @@
 
 <!--***************ARIA MARKER 'BANNER'***************-->
 <header role="banner">
-  <div id="header_logo_div">
-    <a href="/"><img src="/img/fill-logo.png" class="fill-logo" alt="fill"></a><p class="fill-tagline">connecting libraries, serving patrons.</p>
+  <div id="header_logo">
+    <a href="/"><img src="/img/fill-logo.png" class="fill-logo" alt="fill"></a>
+    <p id="fill-tagline">connecting libraries, serving patrons.</p>
   </div>
 
-  <div id="logout_button_div">
+  <div id="logout_button">
     <a href="?authen_logout=1" type="button" role="button" id="fill-button">log out</a>
   </div>
 
