--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -85,8 +85,9 @@
           <p style="display:none"><TMPL_VAR name="lid"></p>
       </div>
     </div>
-    <div id="header_logo">
-      <a href="/"><img src="/img/fill-logo.png" class="fill-logo" alt="fill"></a><p class="fill-tagline">connecting libraries, serving patrons.</p>
+    <div id="fill-logo">
+      <a href="/"><img src="/img/fill-logo.png" alt="fill"></a>
+      <p id="fill-tagline">connecting libraries, serving patrons.</p>
     </div>
 
 
