--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -58,8 +58,8 @@
 
 <!--***************ARIA MARKER 'BANNER'***************-->
 <header role="banner">
-  <div id="header_logo">
-    <a href="/"><img src="/img/fill-logo.png" class="fill-logo" alt="fill"></a>
+  <div id="fill-logo">
+    <a href="/"><img src="/img/fill-logo.png" alt="fill"></a>
     <p id="fill-tagline">connecting libraries, serving patrons.</p>
   </div>
 
@@ -67,7 +67,7 @@
     <a href="?authen_logout=1" type="button" role="button" id="fill-button">log out</a>
   </div>
 
-  <div id="patron_header_info">
+  <div id="patron-info">
     <!-- The id="username" div is necessary: the username gets extracted (in 
 	 fILL_client-public-x.y.js), and passed to the code that allows the patron 
 	 to make an ILL request (we need to know who is making the request :-)
