--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -74,7 +74,7 @@
     </div>
 
     <div class="clear">
-      <div id="patron_header_info">
+      <div id="patron-info">
     <!-- The id="username" div is necessary: the username gets extracted (in 
          fILL_client-public-x.y.js), and passed to the code that allows the patron 
          to make an ILL request (we need to know who is making the request :-)
