--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -63,7 +63,7 @@
     <p id="fill-tagline">connecting libraries, serving patrons.</p>
   </div>
 
-  <div id="logout_button">
+  <div id="logout-button">
     <a href="?authen_logout=1" type="button" role="button" id="fill-button">log out</a>
   </div>
 
