--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -69,7 +69,7 @@
   <!--***************ARIA MARKER 'BANNER'***************-->
   <header role="banner">
 
-    <div id="logout_button">
+    <div id="logout-button">
       <a href="?authen_logout=1" type="button" role="button" id="fill-button">log out</a>
     </div>
 
