--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -87,8 +87,8 @@
     </div>
     <div id="fill-logo">
       <a href="/"><img src="/img/fill-logo.png" alt="fill"></a>
-      <p id="fill-tagline">connecting libraries, serving patrons.</p>
     </div>
+    <div id="fill-tagline"><p>connecting libraries, serving patrons.</p></div>
 
 
 
