fill tagline in header

--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -60,8 +60,8 @@
 <header role="banner">
   <div id="fill-logo">
     <a href="/"><img src="/img/fill-logo.png" alt="fill"></a>
-    <p id="fill-tagline">connecting libraries, serving patrons.</p>
   </div>
+  <div id="fill-tagline"><p>connecting libraries, serving patrons.</p></div>
 
   <div id="logout-button">
     <a href="?authen_logout=1" type="button" role="button" id="fill-button">log out</a>
